<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cost of Living Journal</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="LoadSettings">Load settings</string>
    <string name="delete_all">Delete all items</string>

    <!-- options menu: temporary -->
    <string name="add_item">Add New Item</string>
    <string name="budget">Budget</string>
    <string name="filter">Filter</string>
    <string name="list">Purchases</string>
    <!-- end of options menu -->


    <!-- dialog text -->
    <string name="TEST_TEXT">THIS IS A TEST OH SNAP</string>
    <string name="title">Add a new purchase&#8230;</string>
    <string name="item_name">Name</string>
    <string name="item_cost">Cost</string>
    <string name="delete_title">Delete selected items?</string>
    <!-- end of dialog text -->


    <!-- purchases view -->
    <string name="name_label">Name:&#160;</string>
    <string name="cost_label">Cost:&#160;$</string>
    <string name="category_label">Category:&#160;</string>
    <string name="subcategory_label">Subcategory:&#160;</string>
    <!-- end of purchases view -->

    <string name="title_activity_detail">DetailActivity</string>
    
    <string name="add_item_string">Name of Item</string>
    <string name="add_price_string">Price</string>
    
    <!-- Detail Activity -->
    <string name="country_1">China:</string>
    <string name="country_2">Indonesia:</string>
    <string name="country_3">India:</string>
    <string name="country_4">Brazil:</string>
    <string name="country_5">Pakistan:</string>
    <!-- end of Detail activity -->
    
    <!-- Settings Checkbox -->
    <string name="checkbox_china">China</string>
    <string name="checkbox_indonesia">Indonesia</string>
    <string name="checkbox_india">India</string>
    <string name="checkbox_brazil">Brazil</string>
    <string name="checkbox_pakistan">Pakistan</string>

</resources>
