<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/TitleLabel" 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <EditText 
        android:id="@+id/box1"
        android:hint="@string/add_item_string"
        android:layout_width="match_parent"
   	 	android:layout_height="match_parent"
        android:inputType="textEmailAddress"
        android:maxLength="50"/>
    
    <EditText 
        android:id="@+id/box2"
        android:hint="@string/add_price_string"
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
        android:inputType="numberDecimal|numberSigned"/>

	<Spinner 
	    android:id="@+id/category_spinner"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" />
	
	<Spinner
	    android:id="@+id/subcategory_spinner"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" />
</LinearLayout>
