<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.worldstars.semesterproject436.DetailActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="84dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/Cicon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

           <TextView
        android:id="@+id/NameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/name_label" >
    </TextView>

    <TextView
        android:id="@+id/NameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/NameLabel"
        android:layout_toRightOf="@+id/NameLabel" >
    </TextView>
    
    <TextView
        android:id="@+id/CostLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/NameLabel"
        android:text="@string/cost_label" >
    </TextView>
    
    <TextView
        android:id="@+id/CostView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/CostLabel"
        android:layout_toRightOf="@+id/CostLabel" >
    </TextView>

            <TextView
        android:id="@+id/CategoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/CostLabel" 
        android:textColor="@android:color/black" >
    </TextView>
   <!--android:text="@string/category_label"  -->
    <TextView
        android:id="@+id/CategoryView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/CategoryLabel"
        android:layout_toRightOf="@+id/CategoryLabel"
        android:textColor="@android:color/black" >
    </TextView>
   
    <TextView
        android:id="@+id/SubcategoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/CategoryLabel"
      
        android:textColor="@android:color/black" >
    </TextView>
      <!-- android:text="@string/subcategory_label" -->
    <TextView
        android:id="@+id/SubcategoryView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/SubcategoryLabel"
        android:layout_toRightOf="@+id/SubcategoryLabel"
        android:textColor="@android:color/black" >
    </TextView>
    
        </LinearLayout>
   
            
     <TextView
        android:id="@+id/ChinaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/country_1" />
     <TextView
        android:id="@+id/ChinaView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ChinaLabel"
        android:layout_toRightOf="@+id/ChinaLabel"/>
        
     
     <TextView
        android:id="@+id/IndonesiaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/country_2"/>
     <TextView
        android:id="@+id/IndonesiaView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/IndonesiaLabel"
        android:layout_toRightOf="@+id/IndonesiaLabel"/>
     <TextView
        android:id="@+id/IndiaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/country_3" />
     
     <TextView
        android:id="@+id/IndiaView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/IndiaLabel"
        android:layout_toRightOf="@+id/IndiaLabel"/>
     <TextView
        android:id="@+id/BrazilLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/country_4" />
     <TextView
        android:id="@+id/BrazilView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/BrazilLabel"
        android:layout_toRightOf="@+id/BrazilLabel"/>
     <TextView
        android:id="@+id/PakistanLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/country_5" />
     <TextView
        android:id="@+id/PakistanView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/PakistanLabel"
        android:layout_toRightOf="@+id/PakistanLabel"/>
    
    
   
            
    </LinearLayout>

</RelativeLayout>